<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppShop</string>
    <string name="action_settings">Settings</string>
    <string name="honor">热卖</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="me">我的</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_hot">HotActivity</string>
    <string name="title_activity_style">StyleActivity</string>
    <string name="title_activity_me">MeActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_shopcar">ShopCarActivity</string>

    <string name="login_account_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    
    
</resources>
