<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<!--     <include layout="@layout/main_titile_bar" /> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/login_title_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/icon_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp" >

            <EditText
                android:id="@+id/login_name_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_login_account"
                android:drawablePadding="10dip"
                android:ems="10"
                android:hint="@string/login_account_hint"
                android:inputType="text"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/login_passwd_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:drawableLeft="@drawable/icon_login_pass"
                android:drawablePadding="10dip"
                android:ems="10"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dip"
                android:background="@drawable/btn_style_login"
                android:padding="10dip"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:textSize="@dimen/space_15" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>