<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#999999"
        android:baselineAligned="false"
        android:orientation="horizontal">
	<RelativeLayout
            android:id="@+id/title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="changePage" >

            <ImageView
                android:id="@+id/title_home_iv"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/home"
                android:paddingBottom="6dp"
                android:src="@drawable/dot_pic_pressed"
                android:visibility="visible" />

            <TextView
                android:id="@+id/main_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="#ffffff" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/title_honor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="changePage" >

            <ImageView
                android:id="@+id/title_honor_iv"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/honor"
                android:paddingBottom="6dp"
                android:src="@drawable/dot_pic_pressed"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/main_hot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/honor"
                android:textColor="#ffffff" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/title_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="changePage" >

            <ImageView
                android:id="@+id/title_category_iv"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/category"
                android:paddingBottom="6dp"
                android:src="@drawable/dot_pic_pressed"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/main_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/category"
                android:textColor="#ffffff" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/title_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="changePage" >

            <ImageView
                android:id="@+id/title_me_iv"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/me"
                android:paddingBottom="6dp"
                android:src="@drawable/dot_pic_pressed"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/main_me"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/me"
                android:textColor="#ffffff" />
        </RelativeLayout>
        </LinearLayout>
    
</LinearLayout>
